// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header/> @renders in default state 1`] = `
<section
  className="Header"
>
  <div
    className="Header-title"
  >
     Gousto 
  </div>
  <nav
    className="Header-nav"
  >
    <NavLink
      activeClassName="Header-navItem--active"
      className="Header-navItem"
      to="/category/1"
    >
      one
    </NavLink>
    <NavLink
      activeClassName="Header-navItem--active"
      className="Header-navItem"
      to="/category/2"
    >
      two
    </NavLink>
  </nav>
</section>
`;

exports[`<Header/> @renders with empty categories 1`] = `
<section
  className="Header"
>
  <div
    className="Header-title"
  >
     Gousto 
  </div>
  <nav
    className="Header-nav"
  />
</section>
`;
